# rust-learning

./: .gitattributes  Cargo.toml  Dockerfile  docker-compose.yml  inventory.json
.devcontainer/: devcontainer.json
.sqlx/: query-56a1f519914f3728775043315b950f04b2acd105327fcf25e1fe810d4eb840f6.json  query-b58c0a8691a59c3397b8c37215434f7b7f9b52242df3d01e84719cec9c4a31ab.json  query-c3666fc3f81ac4d7941c749f7bddf0ddf7469a5dc019055dbc0222931e34132f.json  query-dafb92889e1d8396d0f94d087bc90af8994e3fcb60ea8914d37b0eb54edf9805.json
frontend/: Dockerfile  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: Item.tsx
migrations/: 20260310071058_create_items_table.sql  20260326080406_add_role_users.sql
src/: auth.rs  error.rs  handlers.rs  main.rs  models.rs  services.rs  state.rs
src/handlers/: item_handler.rs  mod.rs  user_handler.rs
src/repositories/: item_repository.rs  user_repository.rs
src/services/: item_service.rs  user_service.rs
