[package]
name = "web_app"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
dotenvy = "0.15.7"
rustfmt = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
argon2 = "0.5.3"
password-hash = "0.6.0"
jsonwebtoken = { version = "10.3.0", default-features = false, features = [
    "rust_crypto",
] }
chrono = { version = "0.4.44", features = ["serde"] }
